--- a/index.html
+++ b/index.html
@@ -21,21 +21,51 @@
 
 <body>
 
-    Learn to code by watching others
+    <main>
 
-    See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-    but understanding how developers think is invaluable.
+        <header class="intro">
+            <h1 class="intro__heading">Learn to code by watching others</h1>
+            <p class="intro__content">See how experienced developers solve problems in real-time. Watching scripted
+                tutorials is great,
+                but understanding how developers think is invaluable.</p>
+        </header>
+        <article>
+            <div class="offer">
+                <p class="offer__content"><span class="offer__highlight">Try it free 7 days</span> then $20/mo.
+                    thereafter</p>
+            </div>
+            <form class="form" id="form">
+                <div class="form__group">
+                    <input type="text" placeholder="First Name" class="form__input" id="firstName">
+                    <img src="/img/icon-error.svg" alt="" class="error-icon">
+                    <img src="/img/icon-success.svg" alt="" class="success-icon">
+                    <small>Error message</small>
+                </div>
+                <div class="form__group">
+                    <input type="text" placeholder="Last Name" class="form__input" id="lastName">
+                    <img src="/img/icon-error.svg" alt="" class="error-icon">
+                    <img src="/img/icon-success.svg" alt="" class="success-icon">
+                    <small>Error message</small>
+                </div>
+                <div class="form__group">
+                    <input type="email" placeholder="Email Address" class="form__input" id="email">
+                    <img src="/img/icon-error.svg" alt="" class="error-icon">
+                    <img src="/img/icon-success.svg" alt="" class="success-icon">
+                    <small>Error message</small>
+                </div>
+                <div class="form__group">
+                    <input type="password" placeholder="Password" class="form__input" id="password">
+                    <img src="/img/icon-error.svg" alt="" class="error-icon">
+                    <img src="/img/icon-success.svg" alt="" class="success-icon">
+                    <small>Error message</small>
+                </div>
+                <button class="form__btn">Claim your free trial</button>
+                <p class="form__content">By clicking the button, you are agreeing to our <span
+                        class="form__content--highlight">Terms and Services</span></p>
+            </form>
+        </article>
 
-    Try it free 7 days then $20/mo. thereafter
-
-    First Name
-    Last Name
-    Email Address
-    Password
-
-    Claim your free trial
-
-    By clicking the button, you are agreeing to our Terms and Services
+    </main>
 
     <footer>
         <p class="attribution">
