--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
             <form class="form" id="form">
                 <div class="form__group">
                     <input type="text" placeholder="First Name" class="form__input" id="firstName">
-                    <img src="/img/icon-error.svg" alt="" class="error-icon">
-                    <img src="/img/icon-success.svg" alt="" class="success-icon">
+                    <img src="img/icon-error.svg" alt="" class="error-icon">
+                    <img src="img/icon-success.svg" alt="" class="success-icon">
                     <small>Error message</small>
                 </div>
                 <div class="form__group">
                     <input type="text" placeholder="Last Name" class="form__input" id="lastName">
-                    <img src="/img/icon-error.svg" alt="" class="error-icon">
-                    <img src="/img/icon-success.svg" alt="" class="success-icon">
+                    <img src="img/icon-error.svg" alt="" class="error-icon">
+                    <img src="img/icon-success.svg" alt="" class="success-icon">
                     <small>Error message</small>
                 </div>
                 <div class="form__group">
                     <input type="email" placeholder="Email Address" class="form__input" id="email">
-                    <img src="/img/icon-error.svg" alt="" class="error-icon">
-                    <img src="/img/icon-success.svg" alt="" class="success-icon">
+                    <img src="img/icon-error.svg" alt="" class="error-icon">
+                    <img src="img/icon-success.svg" alt="" class="success-icon">
                     <small>Error message</small>
                 </div>
                 <div class="form__group">
                     <input type="password" placeholder="Password" class="form__input" id="password">
-                    <img src="/img/icon-error.svg" alt="" class="error-icon">
-                    <img src="/img/icon-success.svg" alt="" class="success-icon">
+                    <img src="img/icon-error.svg" alt="" class="error-icon">
+                    <img src="img/icon-success.svg" alt="" class="success-icon">
                     <small>Error message</small>
                 </div>
                 <button class="form__btn">Claim your free trial</button>
